--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -7,11 +7,17 @@ spring:
     username: root
     password: validsam123
     driver-class-name: com.mysql.cj.jdbc.Driver
+    hikari:
+      maximum-pool-size: 10
+      minimum-idle: 5
+      idle-timeout: 30000
+      connection-timeout: 30000
+      max-lifetime: 600000
 
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQLDialect
+        dialect: org.hibernate.dialect.MySQL8Dialect
     hibernate:
       ddl-auto: update
 
@@ -25,10 +31,23 @@ spring:
 
   mvc:
     log-resolved-exception: true
+
   jackson:
     deserialization:
       fail-on-unknown-properties: true
 
+  logging:
+    level:
+      com.zaxxer.hikari: WARN  # Suppress verbose HikariCP logs
+      org.hibernate: ERROR     # Suppress Hibernate ORM logs
+      org.hibernate.orm.deprecation: ERROR  # Suppress Hibernate deprecation warnings
+      org.springframework.orm.jpa: ERROR  # Suppress Spring Data JPA warnings
+      org.springframework.web.servlet: ERROR  # Suppress Tomcat startup logs
+      org.springframework.boot.web.embedded.tomcat: ERROR  # Suppress Tomcat logs
+      org.apache.catalina.core: ERROR  # Suppress Tomcat core logs
+      org.apache.catalina.valves: ERROR  # Suppress Tomcat valve logs
+      org.apache.catalina: ERROR  # Suppress Tomcat logs
+      org.springframework.security: ERROR  # Suppress Spring Security logs
 
 server:
   port: 9500
